vlib/v/checker/tests/for_match_err.out
vlib/v/checker/tests/for_match_err.vv:3:7: error: cannot use `match` in `for` loop
    1 | fn main() {
    2 |   mut a := 2
    3 |   for match a {
      |       ~~~~~
    4 |         2 {
    5 |             println('a == 2')
